trunk/Archive2/54/bf1d5d9e71f7a7/output
main.cpp:3:6: warning: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main()
      ^
main.cpp: In function 'int main()':
main.cpp:7:8: error: expected primary-expression before '%' token
 printf(%d"count=1;count<100;count=count+1");
        ^
main.cpp:7:9: error: 'd' was not declared in this scope
 printf(%d"count=1;count<100;count=count+1");
         ^
