trunk/Archive2/54/bf1d5d9e71f7a7/main.cpp
#include <stdio.h>

main()
{
int count=0;
int sum=0;
printf(%d"count=1;count<100;count=count+1");
sum=sum+count;
}